Fixed scrolling on smaller displays

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: rgb(100, 100, 100);
+    overflow-y: hidden;
 }
 
 canvas {
